# rust-uefi-practice

./: Cargo.toml  README.md  build.sh  buildscript.sh  run.sh
buildenv/: Dockerfile
src/: cpu_info.rs  graphics_info.rs  main.rs  memory_info.rs
