[package]
name = "rust-uefi-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
build-stage = 1
target = ["x86_64-unkown-uefi"]

[dependencies]
uefi = { version = "0.25", features = ["alloc"] }
raw-cpuid = "11.0.1"
uefi-services = "0.22.0"    
 
# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
